--- a/RnDops/New pages/form_tracking.html
+++ b/RnDops/New pages/form_tracking.html
@@ -137,28 +137,27 @@
  
           </button>
     <div class="dropdown-menu">
-    <div class="row">
-          <div class="col-md-6"><input type="text" placeholder="Reference Number" onfocus="this.placeholder=''" onblur="this.placeholder=''"class="inputsearch"></div>
-     <div class="col-md-6"><select>
+    
+        <div class="row mt10">
+        <div class="col-md-4"> <input type="text" placeholder="Applicant's name" onfocus="this.placeholder=''" onblur="this.placeholder=''"></div>
+            <div class="col-md-4"><select>
      <option>Applied</option>
      <option >Processed</option>
      <option>Approved</option>
       <option>Rejected</option>
       <option>Cancelled</option>
-  </select></div></div>
-      <div class="row mt10">
-          <div class="col-md-6"><input type="text" placeholder="Applicant's Name" onfocus="this.placeholder=''" onblur="this.placeholder=''"class="inputsearch"></div>
-     <div class="col-md-6">
-         <select>
+  </select></div>
+            <div class="col-md-4">
+                <select>
      <option>Applied</option>
-     <option>Processed</option>
+     <option >Processed</option>
      <option>Approved</option>
       <option>Rejected</option>
       <option>Cancelled</option>
   </select>
-          </div>
+            </div>
         </div>
-    </div>
+     </div>
   </div></li>
               
         </ul> 
