RnDOPs header rectified

--- a/RnDops/New pages/form_tracking.html
+++ b/RnDops/New pages/form_tracking.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-    <nav id="mainNav" class="navbar navbar-default bg-1">
+    <nav id="mainNav" class="navbar mb0 navbar-default bg-1">
   <div class="container welcomeheader">
    
     <div class="navbar-header">
