--- a/RnDops/help_page.html
+++ b/RnDops/help_page.html
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="welcome.html"><img src="../images/headerImg/Logo_Header.jpg"class="logo"></a>
+      <a class="navbar-brand" href="#"><img src="../images/headerImg/Logo_Header.jpg"class="logo"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -192,7 +192,7 @@
         </div></li>
                     <li class="ln right">
           <div class="dropdown iconright">
-    <button class="btn user" id="menu1" type="button" data-toggle="dropdown"><i class="material-icons">perm_identity</i> <span class="caret mb12"></span>
+    <button class="btn user" id="menu1" type="button" data-toggle="dropdown"><i class="material-icons">perm_identity</i>
     </button>
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
          <div class="menutopboxcolor"></div>
@@ -216,7 +216,7 @@
 </nav>
 
 
-<div class="main subheader">
+<div class="mainbody subheader">
     <div class="wrapper">
   <ul>
     <li class="ln">
