--- a/RnDops/New pages/welcome.html
+++ b/RnDops/New pages/welcome.html
@@ -67,6 +67,7 @@
                <li class="ln"><a href="#"class="black">Selection Committee</a></li>
               <li class="ln"><a href="#"class="black">ADHOC</a></li>
                 <li class="ln"><a href="#"class="black">Contractual</a></li>
+                 <li class="ln"><a href="committee_member_disbursal.html"class="black ">Committee Member Change Request</a></li>
               
             </ul>
 </ul></div>
@@ -104,8 +105,7 @@
            <li class="ln secondlist"><a href=""class="black b">Miscellaneous <span class="icon-chevron-down"></span></a></li>
             <ul class="sub-group-list ">
              <li class="ln"><a href="add_new_user.html" class="black ">Add New User</a></li>
-                        <li class="ln"><a href="committee_member_disbursal.html"class="black ">Committee Member Change Request</a></li>
-                         <li class="ln"><a href="dirbursal_consultancy_testing_fee.html"class="black ">Disbursal of Consultancy/Testing fee</a></li>
+                      <li class="ln"><a href="dirbursal_consultancy_testing_fee.html"class="black ">Disbursal of Consultancy/Testing fee</a></li>
                          
                           <li class="ln"><a href="#" class="black">One Time Assistantship</a></li>
                          <li class="ln"><a href=""class="black ">Top-up Fellowship </a></li>
@@ -186,7 +186,7 @@
            <li class="ln right">
           <div class="">
 <!--              <i class="material-icons">help_outline</i>-->
-            <span class="icon-info f20"></span>
+          <a href="help.html"class="black"><span class="icon-info f20"></span></a>  
                </div></li>
 
       </ul>
